@@ -2,6 +2,7 @@ Changelog for Articles.
 
 Articles 1.0.0
 ===============================
+- Add content preview for each article to articles grid
 - Add bulk publish/unpublish/delete/undelete to articles grid
 - [#6202] Add back menuindex into Articles Container settings
 - [#6205] Fix array error in article update controller
